<resources>
    <string name="app_name">Biblioteca</string>
    <string name="btn_Login">Login</string>
    <string name="btn_Registro">Registro</string>
    <string name="crearCuentaTXT">Crear una cuenta</string>
    <string name="nombreET">Nombres</string>
    <string name="apellidoET">Apellidos</string>
    <string name="telefonoET">Telefono</string>
    <string name="correoET">Correo electronico</string>
    <string name="contraseñaET">Contraseña</string>
    <string name="confirmarContraseñaET">Confirmar contraseña</string>
    <string name="registrarUsuario">Registrar</string>
    <string name="tengoUnaCuentaTXT">Tengo una cuenta</string>
    <string name="iniciarSesion">Iniciar sesion</string>
    <string name="correoLogin">Correo</string>
    <string name="passLogin">Contraseña</string>
    <string name="btn_Logeo">Ingresar</string>
    <string name="usuarioNuevoTXT">¿No tienes cuenta?. Registrate</string>
    <string name="btn_LibrosActivty">Libros</string>
    <string name="btn_PréstamosActivty">Préstamos</string>
    <string name="btn_AutoresActivty">Autores</string>
    <string name="btn_CategoriasActivty">Categorias</string>
    <string name="btn_EditorialesActivty">Editoriales</string>
    <string name="btn_ReseñasActivty">Reseñas</string>
    <string name="btn_CerrarSesion">Cerrar Sesion</string>
    <string name="bienvenidoPrincipal">Bienvenido(a)</string>
    <string name="uidPrincipal">--</string>
    <string name="nombresPrincipal">--</string>
    <string name="correoPrincipal">--</string>
    <string name="libros">Libros</string>
    <string name="btn_ActivityAgregarLibro">Agregar</string>
    <string name="btn_ActivityLeerLibro">Visualizar</string>
    <string name="uid_Usuario">Uid del usuario</string>
    <string name="correo_Usuario">Correo de usuario</string>
    <string name="fecha_Hora_actual">Fecha y hora actual</string>
    <string name="tituloLibroET">Titulo</string>
    <string name="autorLibroET">Autor</string>
    <string name="generoLibroET">Género</string>
    <string name="año_PublicaciónLibroET">Año de Publicación</string>
    <string name="numero_PaginasLibroET">Numero de Paginas</string>
    <string name="cantidad_DisponibleLibroET">Cantidad Disponible</string>
    <string name="btnCreateLibro">Agregar</string>
    <string name="id_Libro_Item">Id Libro</string>
    <string name="uid_Usuario_Item">Uid del usuario</string>
    <string name="correo_Usuario_Item">Correo de usuario</string>
    <string name="fecha_Hora_Registro_Item">Fecha y hora registro</string>
    <string name="tituloLibro_Item">Titulo</string>
    <string name="autorLibro_Item">Autor</string>
    <string name="generoLibro_Item">Género</string>
    <string name="año_PublicaciónLibro_Item">Año de Publicación</string>
    <string name="numero_PaginasLibro_Item">Numero de Paginas</string>
    <string name="cantidad_DisponibleLibro_Item">Cantidad Disponible</string>
    <string name="elijaOpcionLibroTXT">Elija una opcion</string>
    <string name="cD_EliminarLibro">Eliminar</string>
    <string name="cD_ActualizarLibro">Actualizar</string>
    <string name="id_Libro_A">Id Libro</string>
    <string name="uid_Usuario_A">Uid del usuario</string>
    <string name="correo_Usuario_A">Correo de usuario</string>
    <string name="fecha_Hora_Registro_A">Fecha y hora registro</string>
    <string name="tituloLibro_A">Titulo</string>
    <string name="autorLibro_A">Autor</string>
    <string name="generoLibro_A">Género</string>
    <string name="año_PublicaciónLibro_A">Año de Publicación</string>
    <string name="numero_PaginasLibro_A">Numero de Paginas</string>
    <string name="cantidad_DisponibleLibro_A">Cantidad Disponible</string>
    <string name="btnUpdateLibro">Actualizar</string>
    <string name="Prestamos">Prestamos</string>
    <string name="btn_ActivityAgregarPrestamos">Agregar</string>
    <string name="btn_ActivityLeerPrestamos">Visualizar</string>
    <string name="uid_UsuarioPrestamos">Uid del usuario</string>
    <string name="correo_UsuarioPrestamos">Correo de usuario</string>
    <string name="fecha_Hora_actualPrestamos">Fecha y hora actual</string>
    <string name="nombreSolicitanteET">Nombre del Solicitante</string>
    <string name="libroET">Libro</string>
    <string name="fecha_PréstamoET">Fecha de Prestamo</string>
    <string name="fecha_DevoluciónET">Fecha de Devolucion</string>
    <string name="estadoPrestamoET">Estado del Prestamo</string>
    <string name="btnCreatePrestamo">Agregar</string>
    <string name="id_Prestamos_Item">Id Prestamo</string>
    <string name="uid_UsuarioPrestamos_Item">Uid del usuario</string>
    <string name="correo_UsuarioPrestamos_Item">Correo de usuario</string>
    <string name="fecha_Hora_RegistroPrestamos_Item">Fecha y hora registro</string>
    <string name="nombreSolicitante_Item">Nombre del Solicitante</string>
    <string name="libro_Item">Libro</string>
    <string name="fecha_Préstamo_Item">Fecha de Prestamo</string>
    <string name="fecha_Devolución_Item">Fecha de Devolucion</string>
    <string name="estadoPrestamo_Item">Estado del Prestamo</string>
    <string name="elijaOpcionPrestamoTXT">Elija una opcion</string>
    <string name="cD_EliminarPrestamo">Eliminar</string>
    <string name="cD_ActualizarPrestamo">Actualizar</string>
    <string name="id_Prestamos_A">Id Prestamo</string>
    <string name="uid_UsuarioPrestamos_A">Uid del usuario</string>
    <string name="correo_UsuarioPrestamos_A">Correo de usuario</string>
    <string name="fecha_Hora_RegistroPrestamos_A">Fecha y hora registro</string>
    <string name="nombreSolicitante_A">Nombre del Solicitante</string>
    <string name="libro_A">Libro</string>
    <string name="fecha_Préstamo_A">Fecha de Prestamo</string>
    <string name="fecha_Devolución_A">Fecha de Devolucion</string>
    <string name="estadoPrestamo_A">Estado del Prestamo</string>
    <string name="btnUpdatePrestamo">Actualizar</string>
    <string name="Autores">Autores</string>
    <string name="btn_ActivityAgregarAutor">Agregar</string>
    <string name="btn_ActivityLeerAutor">Visualizar</string>
    <string name="uid_UsuarioAutores">Uid del usuario</string>
    <string name="correo_UsuarioAutores">Correo de usuario</string>
    <string name="fecha_Hora_actualAutores">Fecha y hora actual</string>
    <string name="nombresAutorET">Nombres</string>
    <string name="apellidosAutorET">Apellidos</string>
    <string name="fecha_NacimientoET">Fecha de nacimiento</string>
    <string name="pais_NacimientoET">Pais de nacimiento</string>
    <string name="libro_EscritoET">Libro escrito</string>
    <string name="btnCreateAutor">Agregar</string>
    <string name="id_Autores_Item">Id Autores</string>
    <string name="uid_UsuarioAutores_Item">Uid del usuario</string>
    <string name="correo_UsuarioAutores_Item">Correo de usuario</string>
    <string name="fecha_Hora_RegistroAutores_Item">Fecha y hora registro</string>
    <string name="nombresAutor_Item">Nombres</string>
    <string name="apellidosAutor_Item">Apellidos</string>
    <string name="fecha_Nacimiento_Item">Fecha de nacimiento</string>
    <string name="pais_Nacimiento_Item">Pais de nacimiento</string>
    <string name="libro_Escrito_Item">Libro Escrito</string>
    <string name="elijaOpcionAutoresTXT">Elija una opcion</string>
    <string name="cD_EliminarAutores">Eliminar</string>
    <string name="cD_ActualizarAutores">Actualizar</string>
    <string name="id_Autores_A">Id Autores</string>
    <string name="uid_UsuarioAutores_A">Uid del usuario</string>
    <string name="correo_UsuarioAutores_A">Correo de usuario</string>
    <string name="fecha_Hora_RegistroAutores_A">Fecha y hora actual</string>
    <string name="nombresAutor_A">Nombres</string>
    <string name="apellidosAutor_A">Apellidos</string>
    <string name="fecha_Nacimiento_A">Fecha de nacimiento</string>
    <string name="pais_Nacimiento_A">Pais de nacimiento</string>
    <string name="libro_Escrito_A">Libro Escrito</string>
    <string name="btnUpdateAutor">Actualizar</string>
    <string name="Categorias">Categorias</string>
    <string name="btn_ActivityAgregarCategorias">Agregar</string>
    <string name="btn_ActivityLeerCategorias">Visualizar</string>
    <string name="uid_UsuarioCategorias">Uid del usuario</string>
    <string name="correo_UsuarioCategorias">Correo de usuario</string>
    <string name="fecha_Hora_actualCategorias">Fecha y hora actual</string>
    <string name="libroCategoriaET">Libro</string>
    <string name="nombreCategoriaET">Nombre de la categoria</string>
    <string name="descripcionET">Descripcion</string>
    <string name="btnCreateCategoria">Agregar</string>
    <string name="id_Categorias_Item">Id Categorias</string>
    <string name="uid_UsuarioCategorias_Item">Uid del usuario</string>
    <string name="correo_UsuarioCategorias_Item">Correo de usuario</string>
    <string name="fecha_Hora_RegistroCategorias_Item">Fecha y hora registro</string>
    <string name="libroCategoria_Item">Libro</string>
    <string name="nombreCategoria_Item">Nombre de la categoria</string>
    <string name="descripcion_Item">Descripcion</string>
    <string name="elijaOpcionCategoriasTXT">Elija una opcion</string>
    <string name="cD_EliminarCategorias">Eliminar</string>
    <string name="cD_ActualizarCategorias">Actualizar</string>
    <string name="id_Categorias_A">Id Categorias</string>
    <string name="uid_UsuarioCategorias_A">Uid del usuario</string>
    <string name="correo_UsuarioCategorias_A">Correo de usuario</string>
    <string name="fecha_Hora_RegistroCategorias_A">Fecha y hora actual</string>
    <string name="libroCategoria_A">Libro</string>
    <string name="nombreCategoria_A">Nombre de la categoria</string>
    <string name="descripcion_A">Descripcion</string>
    <string name="btnUpdateCategoria">Actualizar</string>
    <string name="Editoriales">Editoriales</string>
    <string name="btn_ActivityAgregarEditoriales">Agregar</string>
    <string name="btn_ActivityLeerEditoriales">Visualizar</string>
    <string name="uid_UsuarioEditoriales">Uid del usuario</string>
    <string name="correo_UsuarioEditoriales">Correo de usuario</string>
    <string name="fecha_Hora_actualEditoriales">Fecha y hora actual</string>
    <string name="nombresEditorialET">Nombre Editorial</string>
    <string name="paisEditorialET">Pais</string>
    <string name="año_FundacionEditorialET">Año de fundacion</string>
    <string name="libro_EditorialET">Libro</string>
    <string name="btnCreateEditorial">Agregar</string>
    <string name="id_Editoriales_Item">Id Editoriales</string>
    <string name="uid_UsuarioEditoriales_Item">Uid del usuario</string>
    <string name="correo_UsuarioEditoriales_Item">Correo de usuario</string>
    <string name="fecha_Hora_RegistroEditoriales_Item">Fecha y hora registro</string>
    <string name="nombresEditorial_Item">Nombre Editorial</string>
    <string name="paisEditorial_Item">Pais</string>
    <string name="año_FundacionEditorial_Item">Año de fundacion</string>
    <string name="libro_Editorial_Item">Libro</string>
    <string name="elijaOpcionEditorialesTXT">Elija una opcion</string>
    <string name="cD_EliminarEditoriales">Eliminar</string>
    <string name="cD_ActualizarEditoriales">Actualizar</string>
    <string name="id_Editoriales_A">Id Editoriales</string>
    <string name="uid_UsuarioEditoriales_A">Uid del usuario</string>
    <string name="id_Reseñas_Item">Id Id Reseñas</string>
    <string name="uid_UsuarioReseñas_Item">Uid del usuario</string>
    <string name="correo_UsuarioReseñas_Item">Correo de usuario</string>
    <string name="fecha_Hora_RegistroReseñas_Item">Fecha y hora registro</string>
    <string name="libroReseña_Item">Libro</string>
    <string name="autorReseña_Item">Autor de la Reseña</string>
    <string name="fechaReseña_Item">Fecha de Reseña</string>
    <string name="calificacion_Item">Calificacion</string>
    <string name="comentarios_Item">Comentarios</string>
</resources>