<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:foreground="?android:attr/selectableItemBackground"
    android:focusable="true"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    android:padding="0.2dp"
    app:cardCornerRadius="10dp">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="7dp"
            >

            <!--ITEM RESEÑAS-->
            <TextView
                android:id="@+id/id_Reseñas_Item"
                android:text="@string/id_Reseñas_Item"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>


            <!--ITEM Usuario RESEÑAS -->
            <TextView
                android:id="@+id/uid_UsuarioReseñas_Item"
                android:text="@string/uid_UsuarioReseñas_Item"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>


            <!--ITEM Correo Usuario RESEÑAS -->
            <TextView
                android:id="@+id/correo_UsuarioReseñas_Item"
                android:text="@string/correo_UsuarioReseñas_Item"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>

            <!--ITEM Fecha Registro RESEÑAS -->
            <TextView
                android:id="@+id/fecha_Hora_RegistroReseñas_Item"
                android:text="@string/fecha_Hora_RegistroReseñas_Item"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>

            <!--ITEM LIBRO RESEÑAS -->
            <TextView
                android:id="@+id/libroReseña_Item"
                android:text="@string/libroReseña_Item"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>


            <!--ITEM AUTOR RESEÑAS-->
            <TextView
                android:id="@+id/autorReseña_Item"
                android:text="@string/autorReseña_Item"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>


            <!--ITEM FECHA RESEÑAS DEL AUTOR -->
            <TextView
                android:id="@+id/fechaReseña_Item"
                android:text="@string/fechaReseña_Item"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>


            <!--ITEM CALIFICACION RESEÑAS -->
            <TextView
                android:id="@+id/calificacion_Item"
                android:text="@string/calificacion_Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>



            <!--ITEM COMENTARIOS RESEÑAS -->
            <TextView
                android:id="@+id/comentarios_Item"
                android:text="@string/comentarios_Item"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>



        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.cardview.widget.CardView>